--- a/templates/mitaka/neutron.conf
+++ b/templates/mitaka/neutron.conf
@@ -71,6 +71,10 @@ notify_nova_on_port_data_changes = True
 
 {% include "section-zeromq" %}
 
+{% if global_physnet_mtu -%}
+global_physnet_mtu = {{ global_physnet_mtu }}
+{% endif -%}
+
 [quotas]
 {% if quota_driver -%}
 quota_driver = {{ quota_driver }}
